omnic-v2/debug_lexer_fix_2.txt
C:\Users\juanc\OneDrive\Documents\GitHub\crom-omni\omnic-v2\dist\core\lexer.js:33
}
^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (C:\Users\juanc\OneDrive\Documents\GitHub\crom-omni\omnic-v2\dist\main.js:5:15)

Node.js v22.21.0
